--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
-<html>
+<html ng-app="FashionAds">
   <head>
     <title>FashionAds</title>
-  </head>
-  <body ng-app="FashionAds">
-    <div>
-    this is the front page
-    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-route.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+  <body>
     <script src="app.js"></script>
+    <div class="">
+      <div ng-view></div>
+      <!--page render-->
+    </div>
   </body>
-</html
+</html>
