--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -49,7 +49,7 @@
         <div class="mt-6 text-center">
             <p class="text-sm text-gray-600">
                 Don't have an account? 
-                <a href="regis_pages.html" class="font-medium text-indigo-600 hover:text-indigo-500">
+                <a href="#/register" class="font-medium text-indigo-600 hover:text-indigo-500">
                     Sign up
                 </a>
             </p>
