--- a/pages/register/register.html
+++ b/pages/register/register.html
@@ -50,7 +50,7 @@
         <div class="mt-6 text-center">
             <p class="text-sm text-gray-600">
                 Already have an account? 
-                <a href="login_pages.html" class="font-medium text-blue-600 hover:text-blue-500">
+                <a href="#/login" class="font-medium text-blue-600 hover:text-blue-500">
                     Log in
                 </a>
             </p>
