--- a/index.html
+++ b/index.html
@@ -1,31 +1,42 @@
 <html ng-app="FancyNews">
   <head>
     <title>FashionAds</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular-route.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
     <script src="app.js"></script>
-    <nav class="m-2 p-2 flex justify-between items-center ">
-      <div>
-        <h2>FancyNews</h2>
-      </div>
-      <div>
-        <a href="#/home">Home</a>
-        <a href="#/about">Entertainment</a>
-        <a href="#/about">Health</a>
-        <a href="#/about">Sports</a>
-        <a href="#/about">Science</a>
-        <a href="#/about">Technology</a>
-      </div>
-    </nav>
-    <div class="">
+    <script src="services/AppService.js"></script>
+    <script src="controller/home.js"></script>
+    <div class="flex justify-center border-1 pb-1">
+      <h2 class="font-bold text-2xl">FancyNews</h2>
+    </div>
+    <div class="mb-[-10px] pt-1">
+      <form class="flex justify-center" action="/search" method="GET">
+        <input class="" type="text" name="query" placeholder="Search..." />
+        <button type="submit">Search</button>
+      </form>
+    </div>
+    <div class="flex justify-center items-center gap-10 border-1 p-1">
+      <a href="#/home">Home</a>
+      <a href="#/about">Entertainment</a>
+      <a href="#/about">Health</a>
+      <a href="#/about">Sports</a>
+      <a href="#/about">Science</a>
+      <a href="#/about">Technology</a>
+    </div>
+    <div class="flex max-w[1200px] mt-4 ml-4 mr-4">
       <div ng-view></div>
       <!--page render-->
     </div>
-    <script src="controller/home.js"></script>
   </body>
 </html>
