--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </form>
     </div>
     <div class="flex justify-center items-center gap-10 border-1 p-1">
-      <a href="#/home">Home</a>
+      <a href="/home">Home</a>
       <a href="#/entertainment">Entertainment</a>
       <a href="#/health">Health</a>
       <a href="#/sports">Sports</a>
