--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -1,18 +1,24 @@
+<head>
+  <link rel="stylesheet" href="/css/home.css">
+</head>
+
 <div ng-controller="HomeController">
-  <div ng-repeat="article in news">
-    <a href="{{article.url}}" target="_blank">
-      <div class="card">
-        <img
-          src="{{article.urlToImage}}"
-          alt="News Image"
-          class="card-img-top"
-        />
-        <div class="card-body">
-          <h5 class="card-title">{{article.title}}</h5>
-          <p class="card-text">{{article.description}}</p>
-          <span>{{article.publishedAt | date:'medium'}}</span>
+  <div class="articles-container">
+    <div ng-repeat="article in news" class="article-card">
+      <a href="{{article.url}}" target="_blank" class="article-link">
+        <div class="card">
+          <img
+            src="{{article.urlToImage}}"
+            alt="News Image"
+            class="card-img-top"
+          />
+          <div class="card-body">
+            <h5 class="card-title">{{article.title}}</h5>
+            <p class="card-text">{{article.description}}</p>
+            <span class="publish-date">{{article.publishedAt | date:'medium'}}</span>
+          </div>
         </div>
-      </div>
-    </a>
+      </a>
+    </div>
   </div>
 </div>
